My Django commit

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>DISS NA FILIPA</title>
+<title>Page Title</title>
 </head>
 <body>
 
-<h1>Diss na Filipa</h1>
-<p>Zostałeś zniszczony...</p>
-<a href="https://www.youtube.com/watch?v=AP9kDSZj4gY", target="_blank">Już po tobie</a>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
