--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>DISS NA FILIPA</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<p>This is a paragraph.</p>
-<p>This is a paragraph.</p>
+<h1>Diss na Filipa</h1>
+<p>Zostałeś zniszczony....</p>
+<a href="https://www.youtube.com/watch?v=AP9kDSZj4gY&t=1s", target="_blank">Łatwo</a>
+
 
 </body>
 </html>
