--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,5 +1,5 @@
 <div>
-    <h1><a href="">Django</a></h1>
+    <h1><b><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">DISS NA FILIPA!!!!</a></b></h1>
 </div>
 
 {% for post in posts %}
