--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="page-header">
-    <h1><b><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title="ZWYKLY LINK">DISS NA FILIPA!!!!</a></b></h1>
+    <h1><b><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title="ZWYKLY LINK">NIE KLIKAJ</a></b></h1>
 </div>
 
 <div class="content container">
