--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,39 +1,14 @@
-{% load static %}
-<html lang="pl">
-
-<head>
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>ZYCIE TO BÓL</title>
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/blog.css' %}">
-</head>
-
-<body>
-
-<div class="page-header">
-    <h1><b><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title="ZWYKLY LINK">NIE KLIKAJ</a></b></h1>
-</div>
-
-<div class="content container">
-    <div class="row">
-        <div class="col-md-8">
-            {% for post in posts %}
-                <div class="post">
-                    <div class="date">
-                        <p>published: {{ post.published_date }}</p>
-						<p>author: {{post.author}}</p>
-                    </div>
-                    <h2><a href="">{{ post.title }}</a></h2>
-                    <p>{{ post.text|linebreaksbr }}</p>
-					<br/><br/>
-                </div>
-            {% endfor %}
-        </div>
-    </div>
-</div>
-
-</body>
-
-</html>
+{% extends 'blog/base.html' %}
+{% block content %}
+{% for post in posts %}
+	<div class="post">
+		<div class="date">
+			<p>published: {{ post.published_date }}</p>
+			<p>author: {{post.author}}</p>
+		</div>
+		<h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+		<p>{{ post.text|linebreaksbr }}</p>
+		<br/><br/>
+	</div>
+{% endfor %}
+{% endblock %} 
