--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="page-header">
+		<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         <h1><b><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title="ZWYKLY LINK">NIE KLIKAJ</a></b></h1>
     </div>
     <div class="content container">
